995
This issue still exists, or exists in a very similar form in scalac 2.9.2:
```scala
$ scalac -version
Scala compiler version 2.9.2 -- Copyright 2002-2011, LAMP/EPFL
$ cat I.java 
abstract class I { public enum E { E1 } }
$ cat J.java 
class J extends I {
  public void foo(E e) { }
}
$ cat S.scala 
object S { (new J).foo(null) }
$ scalac I.java J.java S.scala
J.java:2: error: not found: type E
  public void foo(E e) { }
                  ^
one error found
```

The only changes from the initial bug example are s/interface/abstract class/ in I.java and scalac 2.9.2.

Things test fine when I is an interface.  I have not checked the scalac 2.8 variable.
